brio-core/kernel/test_output_integ.txt
warning: profiles for the non root package will be ignored, specify profiles at the workspace root:
package:   C:\Users\wrc02\Desktop\brio\Brio-Kernel\brio-core\components\supervisor\Cargo.toml
workspace: C:\Users\wrc02\Desktop\brio\Brio-Kernel\brio-core\Cargo.toml
   Compiling brio-kernel v0.1.0 (C:\Users\wrc02\Desktop\brio\Brio-Kernel\brio-core\kernel)
warning: unused imports: `SystemTime` and `UNIX_EPOCH`
 --> kernel\src\mesh\remote.rs:3:17
  |
3 | use std::time::{SystemTime, UNIX_EPOCH};
  |                 ^^^^^^^^^^  ^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: function `stub_error` is never used
   --> kernel\src\engine\linker.rs:201:4
    |
201 | fn stub_error(interface: &str) -> String {
    |    ^^^^^^^^^^
    |
    = note: `#[warn(dead_code)]` on by default

warning: field `local_node_id` is never read
  --> kernel\src\mesh\remote.rs:16:5
   |
13 | pub struct RemoteRouter {
   |            ------------ field in this struct
...
16 |     local_node_id: NodeId,
   |     ^^^^^^^^^^^^^
   |
   = note: `RemoteRouter` has a derived impl for the trait `Clone`, but this is intentionally ignored during dead code analysis

warning: `brio-kernel` (lib) generated 3 warnings (run `cargo fix --lib -p brio-kernel` to apply 1 suggestion)
warning: unused import: `brio_kernel::mesh::remote::RemoteRouter`
 --> kernel\tests\distributed_e2e.rs:3:5
  |
3 | use brio_kernel::mesh::remote::RemoteRouter;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

error[E0277]: the trait bound `Box<OpenAIProvider>: LLMProvider` is not satisfied
  --> kernel\src\main.rs:42:38
   |
42 |     registry.register_arc("default", std::sync::Arc::new(Box::new(provider)));
   |                                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `LLMProvider` is not implemented for `Box<OpenAIProvider>`
   |
   = help: the following other types implement trait `LLMProvider`:
             AnthropicProvider
             OpenAIProvider
   = note: required for the cast from `Arc<Box<OpenAIProvider>>` to `Arc<(dyn LLMProvider + 'static)>`

warning: unused variable: `addr_a`
  --> kernel\tests\distributed_e2e.rs:49:18
   |
49 |     let (node_a, addr_a) = spawn_node("node-a", 50055).await;
   |                  ^^^^^^ help: if this is intentional, prefix it with an underscore: `_addr_a`
   |
   = note: `#[warn(unused_variables)]` on by default

For more information about this error, try `rustc --explain E0277`.
error: could not compile `brio-kernel` (bin "brio-kernel") due to 1 previous error
warning: build failed, waiting for other jobs to finish...
warning: `brio-kernel` (test "distributed_e2e") generated 2 warnings (run `cargo fix --test "distributed_e2e"` to apply 1 suggestion)
